<resources>
    <string name="app_name">Wizard Scorekeeper</string>
    <string name="players">Player Setup</string>
    <string name="start">Start</string>
    <string name="playerNameError">All players must have names</string>
    <string name="max_players">Maximum player count is 6</string>
    <string name="min_players">Minimum player count is 3</string>
    <string name="dealer_icon">Dealer icon</string>
    <string name="dealer">Dealer</string>
    <string name="enter_bids">Enter Bids</string>
    <string name="player_bid">Player bid</string>
    <string name="bid_error">Enter a bid for all players</string>
    <string name="trickError">Enter a trick count for all players</string>
    <string name="invalidQuantity">Invalid quantity of tricks</string>
    <string name="final_scores">Final Scores</string>
    <string name="winner">Winner</string>
    <string name="final_score">Final Score</string>
    <string name="new_game">New Game</string>
    <string name="score">Score</string>
    <string name="bid">Bid</string>
    <string name="total">Total</string>
    <string name="continue_text">Continue</string>
    <string name="enter_tricks">Enter Tricks</string>
    <string name="taken">Taken</string>
    <string name="next_round">Next round</string>
    <string name="edit_bids">Edit bids</string>
    <string name="wizard_logo">Wizard logo</string>
    <string name="saved_games">Saved Games</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="contact">Contact</string>
    <string name="feedback_email_content">
        ----------------------------------------------\n
        Please enter your message above this line.\n\n
    </string>
    <string name="alternate_rules">Alternate Rules</string>
    <string name="canadian_rule">Canadian Rule</string>
    <string name="canadian_rule_info">
        If the last person to bid also has the highest score on the score sheet (not tied),
        they cannot bid a number that would cause the total number of tricks bid to equal the total
        number of tricks in the round.
    </string>
    <string name="no_even_bids">No Even Bids</string>
    <string name="no_even_bids_info">
        The last person to bid cannot bid a number that would cause the total number of tricks bid
        to equal the total number of tricks in the round.
    </string>
    <string name="one_to_x">One to X to One</string>
    <string name="one_to_x_info">
        Rather than increasing the number of tricks in a round until the final round, the number of
        tricks only increases to a specified number, then decreases back to one.
    </string>
    <string name="max_tricks">Select maximum number of tricks: </string>
    <string name="add_rule">
        Would you like to see your favourite house rule added? Let me know how it works and I\'ll do my best!
    </string>
    <string name="prefs_err">
        Unable to save setting. Please try again.
    </string>
    <string name="change_mode">Change mode</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="support_dev">Support Developer</string>
    <string name="support_dialog_text">
        I develop this app in my spare time. Because it\'s both free and ad-free, I make no money
        from it. If you\'ve enjoyed using it and want to show your appreciation, I would be very
        grateful.
    </string>
    <string name="coffee">Buy me a coffee</string>
    <string name="contact_text">
        Found a bug? Have a suggestion? Just want to say hi? Feel free to reach out!
    </string>
    <string name="include_info">
        Include device information (please leave enabled if you\'re reporting a bug)
    </string>
    <string name="start_error">Error starting game. Please try again.</string>
    <string name="scorecard">Scorecard</string>
    <string name="no_even_toast">
        The number of tricks bid is not allowed to equal the total number of bids in the round.
        The dealer must change their bid.
    </string>
    <string name="cdn_rule_toast">
        The number of tricks bid is not allowed to equal the total number of bids in the round when
        the dealer is in the lead. The dealer must change their bid.
    </string>
    <string name="leave_game_title">Leave game</string>
    <string name="save_game_dialog">Would you like to save your game?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="zero_num">0</string>
    <string name="winner_icon">Winner icon</string>
    <string name="bid_over_max">You cannot bid more than the number of tricks in the round.</string>
    <string name="delete">delete</string>
    <string name="round_title">Round %d of %d</string>
    <string name="no_saves">No saved games found.</string>
</resources>
