<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/rulesAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/back_only"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:columnOrderPreserved="true"
            android:orientation="vertical"
            android:paddingStart="8sp"
            android:paddingTop="4sp"
            android:paddingEnd="8sp"
            android:paddingBottom="4sp">

            <TextView
                android:id="@+id/cdnRuleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_gravity="start|center_vertical"
                android:fontFamily="@font/lato"
                android:paddingStart="8sp"
                android:paddingEnd="8sp"
                android:text="@string/canadian_rule"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/cdnRuleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_gravity="center_vertical"
                android:labelFor="@id/cdnRuleTitle"
                android:minWidth="56dp" />

            <TextView
                android:id="@+id/cdnRuleInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginBottom="12sp"
                android:fontFamily="@font/lato"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:text="@string/canadian_rule_info"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_row="4"
                android:layout_columnSpan="2"
                android:layout_marginTop="3sp"
                android:layout_marginBottom="3sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/noEvenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_gravity="start|center_vertical"
                android:fontFamily="@font/lato"
                android:paddingStart="8sp"
                android:paddingEnd="8sp"
                android:text="@string/no_even_bids"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/noEvenSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_gravity="center_vertical"
                android:labelFor="@id/noEvenTitle"
                android:minWidth="56dp" />

            <TextView
                android:id="@+id/noEvenInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginBottom="12sp"
                android:fontFamily="@font/lato"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:text="@string/no_even_bids_info"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_row="7"
                android:layout_columnSpan="2"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/oneToXTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_gravity="start|center_vertical"
                android:fontFamily="@font/lato"
                android:paddingStart="8sp"
                android:paddingEnd="8sp"
                android:text="@string/one_to_x"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/oneToXSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="8"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_gravity="center_vertical"
                android:labelFor="@id/noEvenTitle"
                android:minWidth="56dp" />

            <TextView
                android:id="@+id/oneToXInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="9"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginBottom="12sp"
                android:fontFamily="@font/lato"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:text="@string/one_to_x_info"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_row="11"
                android:layout_columnSpan="2"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/addRuleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="12"
                android:layout_columnSpan="2"
                android:layout_marginStart="12sp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="12sp"
                android:text="@string/add_rule"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/contactButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:onClick="onContactDevClicked"
                android:text="@string/contact_developer" />

        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>