<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tricks">

    <include
        layout="@layout/appbar_in_game"
        android:id="@+id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/tricksScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/tricksScrollView"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_marginTop="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/roundTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:fontFamily="@font/lato"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="Round 1 of 10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:fontFamily="@font/lato"
                android:text="@string/enter_tricks"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="42sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8sp"
                    android:fontFamily="@font/lato"
                    android:text="@string/dealer"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/dealerIcon"
                    app:layout_constraintEnd_toEndOf="@+id/dealerName"
                    app:layout_constraintStart_toStartOf="@+id/dealerName"
                    app:layout_constraintTop_toBottomOf="@+id/dealerName" />

                <ImageView
                    android:id="@+id/dealerIcon"
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_marginTop="8sp"
                    android:layout_marginEnd="8sp"
                    android:contentDescription="@string/dealer_icon"
                    app:layout_constraintEnd_toStartOf="@+id/dealerName"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/card" />

                <TextView
                    android:id="@+id/dealerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:maxWidth="250sp"
                    android:minWidth="60sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dealerIcon"
                    app:layout_constraintTop_toTopOf="@id/dealerIcon"
                    tools:text="Player" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TableLayout
                android:id="@+id/tricksTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48sp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dealerIcon">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginStart="10sp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/score"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginStart="10sp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:gravity="bottom"
                        android:text="@string/bid" />

                    <TextView
                        android:layout_width="50sp"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginStart="10sp"
                        android:layout_weight="2"
                        android:fontFamily="@font/lato"
                        android:gravity="bottom"
                        android:text="@string/taken" />

                </TableRow>

                <include
                    layout="@layout/table_row_tricks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/table_row_tricks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/table_row_tricks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/table_row_tricks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <include
                    layout="@layout/table_row_tricks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <include
                    layout="@layout/table_row_tricks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible" />


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:layout_span="2"
                        android:layout_weight="2"
                        android:contentDescription="@string/player_bid"
                        android:fontFamily="@font/lato"
                        android:labelFor="@+id/bidp6"
                        android:text="@string/total"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/trickTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:layout_gravity="center"
                        android:layout_marginStart="30sp"
                        android:layout_weight="2"
                        android:contentDescription="@string/player_bid"
                        android:fontFamily="@font/lato"
                        android:labelFor="@+id/bidp6"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="0" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8sp"
                    android:layout_marginEnd="8sp"
                    android:layout_weight="1"
                    android:onClick="toBids"
                    android:paddingStart="8sp"
                    android:paddingLeft="8sp"
                    android:paddingTop="8sp"
                    android:paddingEnd="8sp"
                    android:paddingRight="8sp"
                    android:paddingBottom="8sp"
                    android:text="@string/edit_bids"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/continueButton"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8sp"
                    android:layout_marginEnd="8sp"
                    android:layout_weight="1"
                    android:onClick="nextRoundButton"
                    android:paddingStart="8sp"
                    android:paddingLeft="8sp"
                    android:paddingTop="8sp"
                    android:paddingEnd="8sp"
                    android:paddingRight="8sp"
                    android:paddingBottom="8sp"
                    android:text="@string/next_round"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>